# Base-Station

./: 5VmotorToLego.stl  CMakeLists.txt  ColorWheel.cpp  ColorWheel.h  Dropbox.cpp  Dropbox.h  HX711.cpp  Led.cpp  Led.h  LoadcelHallSendorenMotorVoorArduino.cpp  Matrix.cpp  Matrix.h  Painting.cpp  Painting.h  README.md  TotalCode-1_1.cpp  battery_indicator.cc  bovenkant (2).stl  bovenkant (3).stl  bovenkant_2 (1).stl  bovenkant_3 (1).stl  final_design_plate.stl  main.cpp  moveFile  sketch_mar27b.ino  test  test.cpp
Charge_pi/: TotalCode-1_1.cpp  main.cpp
Charge_pi/src/: BaseStationMotorTest.cpp  HX711.h  moveFile  test.cpp  uploadArduino
Led_Pi/: .gitignore  DatabaseLookupVoltage.py  Matrix.hpp  README.md  dataBase.py  download_panelinfo.sh  main.cpp
Visualisation_software/: CMakeLists.txt  ColorWheel.cpp  ColorWheel.h  Dropbox.cpp  Dropbox.h  LICENSE  Led.cpp  Led.h  Matrix.cpp  Matrix.h  Painting.cpp  Painting.h  main.cpp
loadcell_tryout/: HX711.cpp  HX711.h
models/3d_models/: LaserHouder.stl  T-connector (2).stl  T-connector (3).stl  base_station (1).stl  base_station (2).stl  base_station.stl  charge_arm.stl  connector.stl  connector_longside.stl  connector_shortside (1).stl  design_total_station.stl  holder_switch.stl  middle_connector (1).stl  middle_connector.stl  prototype_2.stl  rijdend_platform.stl  total_basestation.stl
src/: HX711.cpp  test.cpp  uploadArduino
